<resources>
    <string name="app_name">Koinan</string>
    <string name="informasi">Informasi</string>
    <string name="mulai">Mulai</string>
    <string name="logo">logo</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="sedang_menghitung">Sedang Menghitung!</string>
    <string name="koin_rp_1_000">Koin Rp. 1.000 :</string>
    <string name="koin_rp_500">Koin Rp. 500 :</string>
    <string name="koin_rp_200">Koin Rp. 200 :</string>
    <string name="koin_rp_100">Koin Rp. 100 :</string>
    <string name="val_koin_rp_1_000">0</string>
    <string name="val_koin_rp_500">0</string>
    <string name="val_koin_rp_200">0</string>
    <string name="val_koin_rp_100">0</string>
    <string name="total_koin_anda">Total Koin Anda:</string>
    <string name="logo_activity_count">TODO</string>
    <string name="logo_activity_exchange">TODO</string>
    <string name="pilih_konversi">Pilih Konversi</string>
    <string name="icon_voucher_exchange">TODO</string>
    <string name="icon_wallet_exchange">TODO</string>
    <string name="count_voucher_map_50k">x1</string>
    <string name="count_voucher_map_100k">x1</string>
    <string name="total_koin">Total Koin:</string>
    <string name="total_koin_map">Rp. 0</string>
    <string name="btn_tukar_count_map">Tukar</string>
    <string name="rp_100_000">Rp. 100.000</string>
    <string name="rp_50_000">Rp. 50.000</string>
    <string name="logo_activity_count_voucher_map">TODO</string>
    <string name="logo_voucher_list">TODO</string>
    <string name="voucher_map">Voucher MAP</string>
    <string name="icon_voucher_map">TODO</string>
    <string name="unilever">Unilever</string>
    <string name="map">MAP</string>
    <string name="icon_voucher_unlivere">TODO</string>
    <string name="logo_confirm">TODO</string>
    <string name="voucher_list">Voucher</string>
    <string name="tukar">Tukar</string>
    <string name="total_koin_confirm">Rp. 0</string>
    <string name="sisa_koin">Sisa Koin</string>
    <string name="voucher_map_rp_50_000_x_1">Voucher Map Rp. 50.000 x 1</string>
    <string name="detail_penukaran">Detail Penukaran</string>
    <string name="rp_0">Rp. 0</string>
    <string name="total_koin_voucher_list">Total Koin</string>
    <string name="konfirmasi_penukaran">Konfirmasi Penukaran</string>
    <string name="icon_voucher_map_50k">TODO</string>
    <string name="digital_wallet">Digital Wallet</string>
    <string name="voucher">Voucher</string>
    <string name="icon_voucher_map_100k">TODO</string>
</resources>